Bug 45219 - SLIDESHOW: Transparency gradient effect fade in with wrong VIEWING
Summary: SLIDESHOW: Transparency gradient effect fade in with wrong VIEWING
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: All All
: medium major
Assignee: David Tardon
URL:
Whiteboard: target:3.6.0 target:3.5.2
Keywords: regression
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2012-01-25 02:48 UTC by Rainer Bielefeld Retired
Modified: 2012-04-12 11:41 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Demo (32.08 KB, application/vnd.oasis.opendocument.presentation)
2012-01-25 02:48 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-01-25 02:48:23 UTC
Created attachment 56132 [details]
Demo

Steps how to reproduce with "LibreOffice 3.5.0 RC1 German UI/Locale [Build-ID: b6c8ba5-8c0b455-0b5e650-d7f0dd3-b100c87] on German WIN7 Home Premium (64bit):

1. open attached demo.odg
2. Start slide show with <f9>
3. on Slide 2
   Expected: all cicrles will appear smoothly
   Actual: gradients appear in steps, ugly effects in already shown shapes

Already a problem with Master in July 2011

Works fine with "LibreOffice 3.4.5 German UI [Build ID: OOO340m1 (Build:502)]" parallel Server installation on German WIN7 Home Premium (64bit)
Comment 1 Korrawit Pruegsanusak 2012-01-26 05:52:59 UTC
David, I see your commit mentioning this bug here:

http://cgit.freedesktop.org/libreoffice/core/commit/?id=259e0dfc293d455f1ea777de132730f7e5fde22d

So, shall we mark this bug as fixed?
Comment 2 David Tardon 2012-01-28 01:40:48 UTC
(In reply to comment #1)
> David, I see your commit mentioning this bug here:
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/?id=259e0dfc293d455f1ea777de132730f7e5fde22d
> 
> So, shall we mark this bug as fixed?

No. Unfortunately, this patch is not enough :( The slideshow now works with hardware acceleration enabled, but not without it.
Comment 3 Thorsten Behrens (allotropia) 2012-02-17 08:40:29 UTC
There are two things left for the vclcanvas (the non-hardware-accelerated case) - first, there's an ugly repaint bug at the first circle, when the 2nd circle's animation starts. Need to investigate that. Secondly, all transparency in animated objects is *deliberately* 1bit - performance of vclcanvas is otherwise inacceptable. So the nasty gradients in "step-mode" that you see there was a tradeoff.
Comment 4 Thorsten Behrens (allotropia) 2012-02-22 01:18:53 UTC
Just fixed an ugly incorrect blending issue for cairocanvas, caused by a failing std::unique.
Comment 5 Not Assigned 2012-02-22 02:19:10 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2c7e061997202df9e602e209cf40c61606582e8e

Fix fdo#45219 wrong transparency for animated objects.
Comment 6 Thorsten Behrens (allotropia) 2012-03-16 09:06:47 UTC
Pushed bunch of fixes to master that should fix this as much as possible - for the transparency gradient, I now treat everything below 98% transparence as opaque, so this should look a lot less ugly now.
Comment 7 Not Assigned 2012-03-16 09:06:54 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=50309b9574c43de93a05576904813881eb7bc898

Another partial fix for fdo#45219
Comment 8 Not Assigned 2012-03-16 09:07:26 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3f5efa1e76e187070d412d102e4c057679065bcc

Use transparency for gradients fdo#45219
Comment 9 Not Assigned 2012-03-16 09:07:52 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e86bcf11340f35afe899d02aa5facdbecdd309ab

Clear full sprite area for fdo#45219
Comment 10 Not Assigned 2012-03-16 09:08:25 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b9266113514657be1cf9352e1457a5c62876784c

Clear sprites to white fdo#45219.
Comment 11 Not Assigned 2012-03-16 09:08:56 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d32cf8d820be839c7303e3c5962c17f64cac2812

Clear whole layer in slideshow sprites fdo#45219
Comment 12 Not Assigned 2012-03-18 23:29:16 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bed182f5f3059e30c3e53a163a031de1f0c2bc46&g=libreoffice-3-5

Another partial fix for fdo#45219


It will be available in LibreOffice 3.5.2.
Comment 13 Not Assigned 2012-03-18 23:35:29 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e5cf9610961b0f6978e15b2a81b0f9aa769e0298&g=libreoffice-3-5

Use transparency for gradients fdo#45219


It will be available in LibreOffice 3.5.2.
Comment 14 Not Assigned 2012-03-18 23:41:47 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=047f6738d045ef94112ed45ed2eabb73e5e07111&g=libreoffice-3-5

Clear full sprite area for fdo#45219


It will be available in LibreOffice 3.5.2.
Comment 15 Not Assigned 2012-03-18 23:42:20 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6f7a003ef738e3b11ff8d577c2b350b50d416235&g=libreoffice-3-5

Clear sprites to white fdo#45219.


It will be available in LibreOffice 3.5.2.
Comment 16 Not Assigned 2012-03-18 23:48:48 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e3f835eee16ac7d9dfa76eed8c043e7874995058&g=libreoffice-3-5

Clear whole layer in slideshow sprites fdo#45219


It will be available in LibreOffice 3.5.2.
Comment 17 Not Assigned 2012-03-20 03:44:31 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8f769141f35f18782f3e43862baedf40d3ce19c6&g=libreoffice-3-5

Fix fdo#45219 wrong transparency for animated objects.


It will be available in LibreOffice 3.5.2.
Comment 18 Rainer Bielefeld Retired 2012-03-20 10:59:06 UTC
Yes, so should it look works fine with parallel installation of "LOdev 3.5.2rc0+  [Build ID: ec752de-73cb0b8-f269e46] Win-x86@6-fast pull time 2012-03-19 11:08:23 – WIN7 Home Premium (64bit)