transparency gradient effect fade in is wrong (fdo#45219)